; ModuleID = '/home/carl/AnghaBench/linux/tools/testing/selftests/pidfd/extr_pidfd_test.c_pidfd_clone.c'
source_filename = "/home/carl/AnghaBench/linux/tools/testing/selftests/pidfd/extr_pidfd_test.c_pidfd_clone.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SIGCHLD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*, i32 (i8*)*)* @pidfd_clone to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pidfd_clone(i32 %0, i32* %1, i32 (i8*)* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32 (i8*)*, align 8
  %7 = alloca i64, align 8
  %8 = alloca [1024 x i8*], align 16
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i32 (i8*)* %2, i32 (i8*)** %6, align 8
  store i64 1024, i64* %7, align 8
  %9 = bitcast [1024 x i8*]* %8 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %9, i8 0, i64 8192, i1 false)
  %10 = load i32 (i8*)*, i32 (i8*)** %6, align 8
  %11 = getelementptr inbounds [1024 x i8*], [1024 x i8*]* %8, i64 0, i64 0
  %12 = load i64, i64* %7, align 8
  %13 = getelementptr inbounds i8*, i8** %11, i64 %12
  %14 = load i32, i32* %4, align 4
  %15 = load i32, i32* @SIGCHLD, align 4
  %16 = or i32 %14, %15
  %17 = load i32*, i32** %5, align 8
  %18 = call i32 @clone(i32 (i8*)* %10, i8** %13, i32 %16, i32* null, i32* %17)
  ret i32 %18
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @clone(i32 (i8*)*, i8**, i32, i32*, i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
